[package]
name = "tower_grpc_proxy"
version = "0.1.0"
authors = ["John Hernandez <john.hern@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
futures = "0.3"
tower-service = "0.3"
http="0.2"
hyper="*"
log = "*"
futures-util = "0.3"
base64 = "0.10"
pretty-hex = "*"
bytes = "*"